--- a/app/src/main/res/layout/activity_test_1.xml
+++ b/app/src/main/res/layout/activity_test_1.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
 
     <!--<com.devyk.custom_view.paint.MyGradientView android:layout_width="match_parent"-->
@@ -36,10 +36,11 @@
     <!--<com.devyk.custom_view.paint.XfermodeView android:layout_width="match_parent" android:layout_height="match_parent"/>-->
 
     <!--<com.devyk.custom_view.paint.xfermode.RoudImageView-->
-            <!--android:layout_centerInParent="true"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"/>-->
+    <!--android:layout_centerInParent="true"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"/>-->
 
-    <com.devyk.custom_view.paint.xfermode.GuaGuaCardView android:layout_width="wrap_content"
-                                                            android:layout_height="wrap_content"/>
+    <com.devyk.custom_view.paint.xfermode.GuaGuaCardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 </RelativeLayout>
