--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,60 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.devyk.customview.sample_1.ScrollerViewPager
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".Main2Activity">
+
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="0dp">
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+            <Button
+                    android:id="@+id/button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="绘制圆"
+                    tools:layout_editor_absoluteX="39dp"
+                    tools:layout_editor_absoluteY="46dp" />
 
 
-    <com.devyk.customview.sample_1.MyRecyclerView
-            android:id="@+id/recyclerView" android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            <Button
+                    android:id="@+id/button2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="刮刮卡"
+                    tools:layout_editor_absoluteX="243dp"
+                    tools:layout_editor_absoluteY="46dp" />
+            <Button
+                    android:id="@+id/button3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="滑动冲突处理"
+                    tools:layout_editor_absoluteX="5dp"
+                    tools:layout_editor_absoluteY="103dp" />
+            <Button
+                    android:id="@+id/button4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="自定义横划动"
+                    tools:layout_editor_absoluteX="243dp"
+                    tools:layout_editor_absoluteY="114dp" />
+            <Button
+                    android:id="@+id/button5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="钟表"
+                    tools:layout_editor_absoluteX="243dp"
+                    tools:layout_editor_absoluteY="114dp" />
+            <Button
+                    android:id="@+id/button6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="基础事件"
+                    tools:layout_editor_absoluteX="243dp"
+                    tools:layout_editor_absoluteY="114dp" />
+            <Button
+                    android:id="@+id/button7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="事件拦截"
+                    tools:layout_editor_absoluteX="243dp"
+                    tools:layout_editor_absoluteY="114dp" />
+            <Button
+                    android:id="@+id/button8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="钟表"
+                    tools:layout_editor_absoluteX="243dp"
+                    tools:layout_editor_absoluteY="114dp" />
+            <Button
+                    android:id="@+id/button9"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="钟表"
+                    tools:layout_editor_absoluteX="243dp"
+                    tools:layout_editor_absoluteY="114dp" />
 
-    </com.devyk.customview.sample_1.MyRecyclerView>
-    <com.devyk.customview.sample_1.MyRecyclerView
-            android:id="@+id/recyclerView2" android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-    </com.devyk.customview.sample_1.MyRecyclerView>
-    <com.devyk.customview.sample_1.MyRecyclerView
-            android:id="@+id/recyclerView3" android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-    </com.devyk.customview.sample_1.MyRecyclerView>
-</com.devyk.customview.sample_1.ScrollerViewPager>
+        </LinearLayout>
+    </ScrollView>
 
 
-        <!--<Button-->
-        <!--android:id="@+id/btn_1"-->
-        <!--android:text="1"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"/>-->
-        <!--<Button-->
-        <!--android:id="@+id/btn_2"-->
-        <!--android:text="2"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"/>-->
-        <!--<Button-->
-        <!--android:id="@+id/btn_3"-->
-        <!--android:text="3"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"/>-->
-        <!--<Button-->
-        <!--android:id="@+id/btn_4"-->
-        <!--android:text="4"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"/>-->
-        <!--<Button-->
-        <!--android:id="@+id/btn_5"-->
-        <!--android:text="5"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"/>-->
-        <!--<com.devyk.customview.sample_1.Button-->
-        <!--android:id="@+id/btn_6"-->
-        <!--android:text="6"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"/>-->
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 
