--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -5,11 +5,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+    <com.devyk.customview.sample_1.CircleView
+            android:layout_width="wrap_content"
+            android:background="#BEB3B3"
+            android:layout_height="200dp" />
 
     <com.devyk.customview.sample_1.CircleView2
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:background="#000"
-            android:layout_height="100dp" />
+            android:layout_height="100dp"
+            android:layout_marginTop="100dp" />
 
 
     <com.devyk.customview.sample_1.CircleView2
@@ -27,13 +32,5 @@
             android:padding="20dp"
             android:layout_height="100dp" />
 
-    <!--    <com.devyk.custom_view.flow.TagFlowLayout-->
-    <!--            android:id="@+id/mFlowLayout"-->
-    <!--            android:background="@color/colorAccent"-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:padding="5dp"-->
-    <!--            app:max_select="-1">-->
 
-    <!--    </com.devyk.custom_view.flow.TagFlowLayout>-->
 </LinearLayout>
