--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
                     android:text="刮刮卡"
                     tools:layout_editor_absoluteX="243dp"
                     tools:layout_editor_absoluteY="46dp" />
+
             <Button
                     android:id="@+id/button3"
                     android:layout_width="match_parent"
@@ -40,6 +41,7 @@
                     android:text="滑动冲突处理"
                     tools:layout_editor_absoluteX="5dp"
                     tools:layout_editor_absoluteY="103dp" />
+
             <Button
                     android:id="@+id/button4"
                     android:layout_width="match_parent"
@@ -47,6 +49,7 @@
                     android:text="自定义横划动"
                     tools:layout_editor_absoluteX="243dp"
                     tools:layout_editor_absoluteY="114dp" />
+
             <Button
                     android:id="@+id/button5"
                     android:layout_width="match_parent"
@@ -54,6 +57,7 @@
                     android:text="钟表"
                     tools:layout_editor_absoluteX="243dp"
                     tools:layout_editor_absoluteY="114dp" />
+
             <Button
                     android:id="@+id/button6"
                     android:layout_width="match_parent"
@@ -61,6 +65,7 @@
                     android:text="基础事件"
                     tools:layout_editor_absoluteX="243dp"
                     tools:layout_editor_absoluteY="114dp" />
+
             <Button
                     android:id="@+id/button7"
                     android:layout_width="match_parent"
@@ -68,13 +73,15 @@
                     android:text="事件拦截"
                     tools:layout_editor_absoluteX="243dp"
                     tools:layout_editor_absoluteY="114dp" />
+
             <Button
                     android:id="@+id/button8"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="钟表"
+                    android:text="绘制"
                     tools:layout_editor_absoluteX="243dp"
                     tools:layout_editor_absoluteY="114dp" />
+
             <Button
                     android:id="@+id/button9"
                     android:layout_width="match_parent"
