--- a/app/src/main/res/layout/activity_main5.xml
+++ b/app/src/main/res/layout/activity_main5.xml
@@ -10,6 +10,6 @@
 
 
     <com.devyk.custom_view.canvas.ClockView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="300dp"
+            android:layout_height="300dp" />
 </RelativeLayout>
